--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Template File</title>
+		<title>Karl's Comics</title>
 		<!-- Reset first, order matters -->
 		<link href="css/reset.css" rel="stylesheet" type="text/css">
 		<link href="css/main.css" rel="stylesheet" type="text/css">
